(docs): adds swagger definitions to 'order' controller
